fix random white space on the bottom of html,STAFF FAVORITES button margin in phone view

--- a/less/variables.less
+++ b/less/variables.less
@@ -1,13 +1,13 @@
 //COLOR SCHEME
 
-@pokestats-color-primary: #1D1D1D;
+@pokestats-color-primary: #1d1d1d;
 @pokestats-color-white: #fff;
-@pokestats-color-yellow: #F8FF33; 
-@pokestats-color-grey: #979797; 
+@pokestats-color-yellow: #f8ff33;
+@pokestats-color-grey: #979797;
 
-//responsive page sizes 
+//responsive page sizes
 
-@tablet: (max-width: 800px); 
-@phone: (max-width: 500px);
+@tablet: ~"(max-width: 800px)";
+@phone: ~"(max-width: 540px)";
 
-@tablet_small: (max-width: 700px);
+@tablet_small: ~"(max-width: 700px)";
